--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pizza Box Home</title>
-  <meta name="Início | Pizza Box, Formosa "
-    content="Venha se saborear com as nossas pizzas, feitas com muito amor e carinho!, Localizada em Formosa Goiás">
-  <link rel="shortcut icon" href="../lading-page/assets/pizzalogo.ico" type="image/x-icon">
+  <title>Notícias Formosa | Home </title>
+  <meta name="Início | Notícias Formosa" content="Venha se informar sobre as últimas notícias de Formosa Goiás">
+  <link rel="shortcut icon" href="assets/icone_jornal.ico" type="image/x-icon">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="media.css">
@@ -15,11 +14,11 @@
 
 <body>
   <header>
-    <h1>PizzaBox</h1>
+    <h1>Notícias Formosa</h1>
     <menu class="menu">
       <nav class="navegar">
         <a href="#" target="_self" rel="next">Início</a>
-        <a href="#" target="_self" rel="next">Cardápio</a>
+        <a href="#" target="_self" rel="next">Últimas Notícias</a>
         <a href="#" target="_self" rel="next">Contato</a>
         <a href="#" target="_self" rel="next">Sobre</a>
       </nav>
@@ -28,29 +27,37 @@
 
 
 
-  <main class="container">
-    <div class="div1">
-      <section class="section1">
-        <h2 class="titulo1">Bem-vindo(a) à Pizza Box</h2>
-        <hr>
-        <h2 class="titulo2">Aqui Você vai Encontrar as melhores pizzas de Formosa!</h2>
-      </section>
-    </div>
-    <div class="div2">
-      <span>Novidades!</span>
-      <section class="section2">
-        <figure><img src="assets/promocao1.png" alt="promoções" class="imagem1"></figure>
-        <div class="div3">
-          <figure><img src="assets/promocao2.png" alt="promoções" class="imagem2"></figure>
-          <figure><img src="assets/promocao3.png" alt="promoções" class="imagem2"></figure>
-        </div>
-      </section>
-    </div>
+  <main>
+
+    <h2 id="oi1">Nova Árvore é descoberta no Parque Municipal do Itiquira</h2>
+
+    <figure><img src="assets/iti1.png" alt="Parque do Itiquira"></figure>
+
+    <p>A nova árvore descoberta, conhecida como Casca de Limão, atraiu a atenção de turistas e formosenses. Com aspecto
+      áspero, cor verde e textura parecida com a casca de limão, essa árvore ganhou fama na região. Todos os dias,
+      milhares de pessoas visitam o Parque do Itiquira apenas para vê-la e tirar fotos. Ainda não se sabe se ela possui
+      propriedades curativas, mas os médicos já especulam que ela pode ter potenciais benefícios medicinais, ainda a
+      serem
+      confirmados por estudos.</p>
+
+    <hr class="linha-personalizada">
+
+    <h2 id="oi">Nova Espécie de Animal é Descoberta no Cerrado de Formosa</h2>
+
+    <figure><img src="assets/cerrado.png" alt="Cerrado Formosa"></figure>
+
+    <p>Nova Espécie de Animal é Descoberta no Cerrado de Formosa
+
+      Uma nova espécie de animal foi descoberta no Cerrado de Formosa, Goiás, surpreendendo cientistas pela sua aparência única. O animal, ainda sem nome definitivo, possui características que o distinguem de outras espécies da região, como uma coloração peculiar e hábitos noturnos. A descoberta ocorreu em uma área pouco explorada. Biólogos estão estudando suas adaptações ao clima do Cerrado e seu papel ecológico. A espécie promete ampliar o conhecimento sobre a biodiversidade da região.</p>
+
   </main>
+
+
+
   <footer>
     <p class="p1">S.A.C: Dúvidas, reclamações, sugestões e / ou elogios envie um e-mail para: <a
         href="#">xxxx@gmail.com</a></p>
-    <p class="p2">&copy; Pizza Box, 2024</p>
+    <p class="p2">&copy; Notícias Formosa, 2024</p>
     <div class="div4">
       <a href="https://www.flaticon.com/br/icones-gratis/instagram" title="instagram ícones" target="_blank"
         rel="nofollow"><img src="assets/instagram.png"
